# gtest-boilerplate

./: CMakeLists.txt  main.cpp  name.h  test_name.cpp
